# sre-automation

./: .env.example  .gitignore  config.py  main.py  pyproject.toml  test_breakfast_advisor.py  test_ui.py
agents/: __init__.py  breakfast_advisor_agent.py  breakfast_price_checker_agent.py  healthy_breakfast_planner_agent.py  incident_intelligence_agent.py  nutrition_agent.py  operational_signals_agent.py  sre_analysis_agent.py
config/: ENV_TEMPLATE.txt  SETUP_GUIDE.txt  __init__.py  operational_signals_config.py  sample_data_structure.json
dashboard/: app.py
dashboard/components/: __init__.py  incident_intelligence_page.py  operational_signals_page.py
data/: rca_data_display.json  rca_data_ingest.json
data/cache/: git_issue_links.json
data/cache/git_issues/: https___github_ibm_com_VMWSolutions_tracker_issues_39339.json  https___github_ibm_com_VMWSolutions_tracker_issues_39340.json  https___github_ibm_com_VMWSolutions_tracker_issues_39341.json  https___github_ibm_com_VMWSolutions_tracker_issues_39348.json  https___github_ibm_com_VMWSolutions_tracker_issues_39357.json  (+1 more)
data/chroma/: chroma.sqlite3
docs/: agent_architecture.md
ingestion/: ingest_inc_data.py  rag_setup.py
retrieval/: chatbot.py  extract_ingested_inc.py
tools/: __init__.py  broadcom_kb_search_tool.py  git_data_fetcher.py  kb_content_fetcher.py  nutrition_tools.py  rag_incident_tool.py  tool_runner.py  websearch_tools.py
utils/: __init__.py  ai_text_enhancer.py  cache_manager.py  date_utils.py  git_issue_linker.py  git_issue_parser.py  json_parsers.py  tracing.py
(+1 files in other folders)
