[project]
name = "sre-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langfuse>=4.7.1",
    "mcp>=1.10.1",
    "openai>=2.41.1",
    "openai-agents",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]

[tool.uv.sources]
openai-agents = { git = "https://github.com/openai/openai-agents-python.git" }
